--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ target/
 *mvnw.cmd
 
 ### IntelliJ IDEA ###
+.idea/*
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -13,7 +14,6 @@ target/
 *.iws
 *.iml
 *.ipr
-/.idea
 
 ### Eclipse ###
 .apt_generated
@@ -39,6 +39,8 @@ build/
 
 ### Mac OS ###
 .DS_Store
+/.idea/
+/.idea/
 /.idea/
 /.idea/
 /.idea/
