--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ target/
 
 ### IntelliJ IDEA ###
 .idea/*
+.idea/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
@@ -39,8 +40,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
-/.idea/
-/.idea/
-/.idea/
-/.idea/
 /.idea/
